<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/common_spacing"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/post_avatar_size"
        android:layout_height="@dimen/post_avatar_size"
        android:contentDescription="@string/avatar_description"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/authorName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/author"
        app:layout_constraintBottom_toTopOf="@id/date"
        app:layout_constraintEnd_toStartOf="@id/options"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/date"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintEnd_toEndOf="@id/authorName"
        app:layout_constraintStart_toStartOf="@id/authorName"
        app:layout_constraintTop_toBottomOf="@id/authorName" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_options_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/headerBarrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,date,options" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/headerBarrier"
        android:text="@string/netology_post" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/liked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_heart_outline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        app:layout_constraintBottom_toBottomOf="@id/liked"
        app:layout_constraintStart_toEndOf="@id/liked"
        app:layout_constraintTop_toTopOf="@id/liked"
        android:text="@string/likes_amount" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/shared"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_share_variant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/likes" />

    <TextView
        android:id="@+id/shared_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        app:layout_constraintBottom_toBottomOf="@id/shared"
        app:layout_constraintStart_toEndOf="@id/shared"
        app:layout_constraintTop_toTopOf="@id/shared"
        android:text="@string/shares_amount" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/bottomBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="liked,shared" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/views"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_baseline_remove_red_eye_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/views_amount" />

    <TextView
        android:id="@+id/views_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/views"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/views"
        android:text="@string/views_amount" />

</androidx.constraintlayout.widget.ConstraintLayout>